# ZBot

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
apps/bot/: .env.example
apps/bot/crates/bot-app/: Cargo.toml
apps/bot/crates/bot-app/src/: main.rs
apps/bot/crates/bot-core/: Cargo.toml
apps/bot/crates/bot-core/src/: context.rs  errors.rs  interaction.rs  lib.rs  metrics.rs  services.rs  tests.rs
apps/bot/crates/bot-features/: Cargo.toml
apps/bot/crates/bot-features/src/: lib.rs  router.rs
apps/bot/crates/bot-features/src/ping/: mod.rs
apps/bot/crates/bot-features/src/reminders_sample/: mod.rs
apps/bot/crates/bot-infra/: Cargo.toml
apps/bot/crates/bot-infra/src/: http.rs  lib.rs  metrics.rs  repositories.rs  scheduler.rs
apps/bot/deploy/: Dockerfile
apps/bot/migrations/: 0001_init.sql  0002_role_panel_presets.sql  0003_welcome_configs.sql
apps/web/: .env.example  auth.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: board-client.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/api/auth/callback/: route.ts
apps/web/app/api/auth/login/: route.ts
apps/web/app/api/auth/logout/: route.ts
apps/web/app/api/candidates/: route.ts
apps/web/app/api/candidates/[id]/: route.ts
apps/web/app/api/candidates/[id]/restart/: route.ts
apps/web/app/api/candidates/[id]/vote/: route.ts
apps/web/app/api/guilds/: route.ts
apps/web/app/api/guilds/[guildId]/invite-url/: route.ts
apps/web/app/api/guilds/[guildId]/role-panels/: route.ts
apps/web/app/api/guilds/[guildId]/role-panels/[panelId]/: route.ts
apps/web/app/api/guilds/[guildId]/role-panels/[panelId]/preset-mappings/: route.ts
apps/web/app/api/guilds/[guildId]/role-panels/[panelId]/publish/: route.ts
apps/web/app/api/guilds/[guildId]/verify-installation/: route.ts
apps/web/app/api/guilds/[guildId]/welcome/: route.ts
apps/web/app/api/guilds/[guildId]/welcome/preview/: route.ts
apps/web/app/api/guilds/[guildId]/wow-presets/: route.ts
apps/web/app/api/guilds/install-callback/: route.ts
apps/web/app/api/intake/discord-forward/: route.ts
apps/web/app/api/session/: route.ts
apps/web/app/guilds/[guildId]/roles/: page.tsx
apps/web/app/guilds/[guildId]/welcome/: page.tsx  welcome-config-form.tsx
apps/web/app/setup/: page.tsx
apps/web/app/sign-in/: page.tsx  sign-in-client.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  textarea.tsx
apps/web/lib/: access.ts  auth-client.ts  auth.ts  config.ts  db.ts  discord.ts  permissions.ts  recruitment.ts  session.ts  welcome.ts
apps/web/sql/: init.sql
apps/web/types/: discord.ts
infra/: docker-compose.yml
src/: config.ts  embed.ts  index.ts  logger.ts  message-parser.ts  raiderio.ts  recruitment-intake.ts  url-parser.ts
tests/: embed.test.ts  message-parser.test.ts  raiderio.test.ts  recruitment-intake.test.ts  url-parser.test.ts
