[workspace]
members = [
  "apps/bot/crates/bot-app",
  "apps/bot/crates/bot-core",
  "apps/bot/crates/bot-infra",
  "apps/bot/crates/bot-features",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["ZBot Team"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["http1", "json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
futures = "0.3"
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "rustls_backend"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate"] }
